# test_task

./: CMakeLists.txt
src/: task1.c  task2.c  task3.cpp
